--- a/Example/test.html
+++ b/Example/test.html
@@ -113,6 +113,7 @@
             }
         };
         controller.startAnimation(false);
+        //controller.startWithAnimationNameForElement("animation1", ".square");
     });
 </script>
 <style>
